# secure-gwas

./: .gitignore  datasharingclient.sh  gwasclient.sh  matmult.sh  share_for_matmult.sh
code/: CMakeLists.txt  Makefile  protocol.h  socket.h
code_ws/: CMakeLists.txt  DataSharingClient.cpp  Makefile  MatMultClient.cpp  gwasiter.h  mpc.h  mpc_multiply.cpp  mpc_multiply.h  param.cpp  param.h  protocol.h  util.h
par/: test.par.0.txt  test.par.1.txt  test.par.2.txt  test.par.3.txt
test_data_ws_2/: m1.txt  m2.txt
